# portrait_generator

./: .gitignore  CMakeLists.txt  README.md  camera.h  controller_camera.cpp  controller_camera.h  controller_editor.cpp  controller_editor.h  face_detector.cpp  face_detector.h  i_camera.h  i_face_detector.h  i_img_editor.h  img_editor.cpp  img_editor.h  main.cpp  portrait.cpp  portrait.h  view_camera.cpp  view_camera.h  view_camera.ui  view_editor.cpp  view_editor.h  view_editor.ui  widget.cpp  widget.h  widget.ui
src/model/: camera.cpp  camera.h  i_face_detector.h  i_img_editor.h  i_img_manager.h  i_img_observer.h  img_editor.cpp  img_editor.h  img_manager.cpp  img_manager.h  main.cpp  portrait.cpp  portrait.h
src/ui/: controller_camera.cpp  controller_camera.h  controller_editor.cpp  controller_editor.h  view_camera.cpp  view_camera.h  view_camera.ui  view_editor.cpp  view_editor.h  view_editor.ui
